Update source and target compatability to Java 8. Closes #8"

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ android {
             buildConfigField "String", "MOVIES_DB_API_KEY", "\"${props.getProperty("moviesDbApiKey")}\""
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 repositories {
